[package]
name = "pi_phf_map"
version = "0.2.1"
authors = ["zmythleo <zmythleo@gmail.com>"]
edition = "2021"
description = "phf_map"
repository = "https://github.com/GaiaWorld/pi_phf_map.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "phf", "map"]
readme = "README.md"
categories = ["data-structures", "phf", "map"]

[dependencies]
fxhash = "0.2.1"
rand ="0.8"
pi_null = "0.1"
pi_wy_rng="0.1"
fixedbitset="0.4"
